# OpenSnowstorm---Brood-War

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  actions.h  ai.h  build_log.txt  build_log_utf8.txt  build_out.txt  build_ui_polish.txt  build_ui_polish_2.txt  bwgame.h  bwgame_combat.h  bwgame_state.h  campaign_progress.txt  cmake_out.txt  cmake_out2.txt  creep.h  data_loading.h  fresh_build.txt  full_build_log.txt  gfxtest_build_log.txt  gfxtest_log.txt  headless_campaign.txt  headless_final.txt  headless_test.txt  openbw_ui_build_log.txt  options.ini  pathfinding.h  playtest_error.txt  progress.md  rebuild.txt  rebuild2.txt  rebuild3.txt  release_build.txt  serialization.h  strf.h  sync.h  test_ui.cpp  (+4 more)
.github/workflows/: ci.yml
dist_temp/: README.md  ROADMAP.md
docs/: broodwar-compatibility.md  phase-5-kickoff.md
mini-openbwapi/: CMakeLists.txt
scratch/: CMakeLists.txt  test_out.c  test_sdl.c
scripts/: build_wasm.ps1  generate_first_sim_fixtures.py  make_dist.ps1  regression_check.py
ui/: gfxtest.cpp  headless_backend.cpp  native_sound.h  sdl2.cpp  ui.h
